--- a/index.html
+++ b/index.html
@@ -39,11 +39,49 @@
       padding: 0 1.5rem;
     }
 
-    /* Header */
-    header {
-      padding: 3rem 0 2rem;
+    /* Hero with video background */
+    .hero {
+      position: relative;
+      height: 100vh;
+      min-height: 500px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      overflow: hidden;
+    }
+
+    .hero__video-bg {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+    }
+
+    .hero__video-bg iframe {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      width: 100vw;
+      height: 56.25vw;
+      min-height: 100vh;
+      min-width: 177.78vh;
+      transform: translate(-50%, -50%);
+      pointer-events: none;
+    }
+
+    .hero__overlay {
+      position: absolute;
+      inset: 0;
+      background: linear-gradient(to bottom, rgba(10, 14, 20, 0.7) 0%, rgba(10, 14, 20, 0.85) 100%);
+      z-index: 1;
+    }
+
+    .hero__content {
+      position: relative;
+      z-index: 2;
       text-align: center;
-      border-bottom: 1px solid var(--border);
+      padding: 2rem;
     }
 
     .header-brand {
@@ -70,10 +108,40 @@
       background-clip: text;
     }
 
-    .subtitle {
+    .hero .subtitle {
       color: var(--text-secondary);
-      font-size: 1rem;
+      font-size: clamp(0.9rem, 2vw, 1.1rem);
       font-weight: 400;
+      margin-bottom: 2rem;
+    }
+
+    .hero__scroll-hint {
+      position: absolute;
+      bottom: 2rem;
+      left: 50%;
+      transform: translateX(-50%);
+      color: var(--text-secondary);
+      font-size: 0.85rem;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 0.5rem;
+      animation: bounce 2s ease-in-out infinite;
+    }
+
+    .hero__scroll-hint::after {
+      content: '';
+      width: 24px;
+      height: 24px;
+      border-right: 2px solid var(--text-secondary);
+      border-bottom: 2px solid var(--text-secondary);
+      transform: rotate(45deg);
+      margin-top: -4px;
+    }
+
+    @keyframes bounce {
+      0%, 100% { transform: translateX(-50%) translateY(0); }
+      50% { transform: translateX(-50%) translateY(8px); }
     }
 
     /* Navigation */
@@ -116,50 +184,10 @@
     }
 
     /* About section layout */
-    .about-layout {
-      display: grid;
-      grid-template-columns: 1fr 1.4fr;
-      gap: 2.5rem;
-      align-items: center;
-    }
-
     .about-text {
       color: var(--text-secondary);
       font-size: 1.05rem;
       line-height: 1.7;
-    }
-
-    .about-video-wrap {
-      position: relative;
-      width: 100%;
-      border-radius: 12px;
-      overflow: hidden;
-      border: 1px solid var(--border);
-    }
-
-    .about-video-wrap::before {
-      content: '';
-      display: block;
-      padding-top: 56.25%;
-    }
-
-    .about-video-wrap iframe {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      border: none;
-    }
-
-    @media (max-width: 768px) {
-      .about-layout {
-        grid-template-columns: 1fr;
-      }
-
-      .about-video-wrap {
-        order: -1;
-      }
     }
 
     section h2 {
@@ -655,30 +683,30 @@
     </div>
   </nav>
 
-  <header id="about">
-    <div class="container">
+  <section class="hero" id="about">
+    <div class="hero__video-bg">
+      <iframe src="https://www.youtube.com/embed/kL9bcCSQXDw?autoplay=1&mute=1&loop=1&playlist=kL9bcCSQXDw&controls=0&showinfo=0&modestbranding=1" title="Argus background" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+    <div class="hero__overlay"></div>
+    <div class="hero__content">
       <div class="header-brand">
         <img src="photos/argus.png" alt="Argus" class="header-logo">
         <h1>Argus</h1>
       </div>
       <p class="subtitle">Multi Modal Edge AI System for Anomaly Detection in Pharmaceutical Manufacturing</p>
     </div>
-  </header>
+    <div class="hero__scroll-hint">Scroll to Explore</div>
+  </section>
 
   <main>
     <section id="about-content">
       <div class="container">
         <h2>About</h2>
-        <div class="about-layout">
-          <p class="about-text">
-            This project is aimed at developing an eco-friendly, sustainable, cost-effective, and scalable solution for anomaly detection 
-            in pharmaceutical manufacturing. This project is a proof of concept on how pharmaceutical manufacturing can opt for edge computing
-            to reduce the carbon footprint that comes from costs including power and latency.
-          </p>
-          <div class="about-video-wrap">
-            <iframe src="https://www.youtube.com/embed/kL9bcCSQXDw?autoplay=1&mute=1&loop=1&playlist=kL9bcCSQXDw" title="Argus overview" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-          </div>
-        </div>
+        <p class="about-text" style="max-width: 800px;">
+          This project is aimed at developing an eco-friendly, sustainable, cost-effective, and scalable solution for anomaly detection 
+          in pharmaceutical manufacturing. This project is a proof of concept on how pharmaceutical manufacturing can opt for edge computing
+          to reduce the carbon footprint that comes from costs including power and latency.
+        </p>
       </div>
     </section>
 
