--- a/index.html
+++ b/index.html
@@ -725,7 +725,7 @@
 
   <section class="hero" id="about">
     <div class="hero__video-bg">
-      <iframe src="https://www.youtube.com/embed/kL9bcCSQXDw?autoplay=1&mute=1&loop=1&playlist=kL9bcCSQXDw&controls=0&showinfo=0&modestbranding=1" title="Argus background" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <iframe src="https://www.youtube.com/embed/L-NGdjvtUAA?autoplay=1&mute=1&loop=1&playlist=L-NGdjvtUAA&controls=0&showinfo=0&modestbranding=1" title="Argus background" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
     <div class="hero__overlay"></div>
     <div class="hero__content">
@@ -746,7 +746,7 @@
             to reduce the carbon footprint that comes from costs including power and latency.
           </p>
           <div class="about-video-wrap">
-            <iframe src="https://www.youtube.com/embed/kL9bcCSQXDw?autoplay=1&mute=1&loop=1&playlist=kL9bcCSQXDw" title="Argus overview" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/L-NGdjvtUAA?autoplay=1&mute=1&loop=1&playlist=L-NGdjvtUAA" title="Argus overview" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
           </div>
         </div>
       </div>
