--- a/index.html
+++ b/index.html
@@ -970,11 +970,11 @@
             </div>
           </article>
           <article class="team-card">
-            <div class="team-photo-wrap">Photo</div>
+            <div class="team-photo-wrap"><img src="photos/MeetTrang.JPG" alt="Trang Nguyen"></div>
             <div class="team-info">
               <h3 class="team-name">Trang Nguyen</h3>
               <p class="team-title">Machine Learning Engineer</p>
-              <p class="team-bio">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+              <p class="team-bio">My name is Trang Nguyen, and I am a Computer Engineering student at UC Irvine and a contributing member of the Argus project. My focus lies in applied machine learning and computer vision. I contributed to the project by developing and training the YOLO-based model used for vial classification and crack detection. I organized the dataset, trained and evaluated the model, and prepared it for deployment. My main interests as an engineer are AI-driven systems and embedded machine learning applications. I am committed to building accurate and efficient models that perform reliably in real-world settings.</p>
             </div>
           </article>
         </div>
