--- a/index.html
+++ b/index.html
@@ -856,7 +856,7 @@
     </div>
     <div class="hero__overlay"></div>
     <div class="hero__content">
-      <img src="photos/argus.png" alt="Argus" class="header-logo">
+      <img src="photos/ArgusLogo.png" alt="Argus" class="header-logo">
       <p class="subtitle">Multi Modal Edge AI System for Anomaly Detection in Pharmaceutical Manufacturing</p>
     </div>
     <div class="hero__scroll-hint">Scroll to Explore</div>
