--- a/index.html
+++ b/index.html
@@ -873,7 +873,7 @@
             to reduce the carbon footprint that comes from costs including power and latency.
           </p>
           <div class="about-video-wrap">
-            <iframe src="https://www.youtube.com/embed/L-NGdjvtUAA?autoplay=1&mute=1&loop=1&playlist=L-NGdjvtUAA" title="Argus overview" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/L-NGdjvtUAA?autoplay=1&mute=1&loop=1&playlist=L-NGdjvtUAA&cc_load_policy=1" title="Argus overview" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
           </div>
         </div>
       </div>
