--- a/index.html
+++ b/index.html
@@ -959,6 +959,9 @@
               <h3 class="team-name">Paribesh Thapaliya</h3>
               <p class="team-title">Computer Vision Engineer</p>
               <p class="team-bio">My name is Paribesh Thapaliya, and I am a Computer Engineering student at UC Irvine and a contributing member of the Argus project, where I worked on foundational setup for my role by configuring the camera and building automatic data collection using OpenCV to detect and capture vials reliably. My main interest as an engineer is embedded systems because I enjoy writing code that interacts directly with hardware.</p>
+              <div class="team-contact">
+                <a href="https://www.linkedin.com/in/paribesh-thapaliya/" target="_blank" rel="noopener noreferrer">LinkedIn</a>
+              </div>
             </div>
           </article>
           <article class="team-card">
