Added Trang and Artin's LinkedIn

--- a/index.html
+++ b/index.html
@@ -970,6 +970,9 @@
               <h3 class="team-name">Artin Tamaddon</h3>
               <p class="team-title">Firmware Engineer</p>
               <p class="team-bio">My name is Artin Tamaddon-Dallal and I am a contributing member of the Argus project. As a Computer Engineering student at UC Irvine, my focus lies in low-level system development. I contributed to the project by writing the foundational server skeleton, assisting in the training and configuration of the sensor pipeline, and taking on supportive roles across team development. My main interests as an engineer are firmware engineering and C/C++ based programming. I am very committed to building readable, efficient solutions at the hardware level.</p>
+              <div class="team-contact">
+                <a href="https://www.linkedin.com/in/artin-t-6030ab303/" target="_blank" rel="noopener noreferrer">LinkedIn</a>
+              </div>
             </div>
           </article>
           <article class="team-card">
@@ -978,6 +981,9 @@
               <h3 class="team-name">Trang Nguyen</h3>
               <p class="team-title">Machine Learning Engineer</p>
               <p class="team-bio">My name is Trang Nguyen, and I am a Computer Engineering student at UC Irvine and a contributing member of the Argus project. My focus lies in applied machine learning and computer vision. I contributed to the project by developing and training the YOLO-based model used for vial classification and crack detection. I organized the dataset, trained and evaluated the model, and prepared it for deployment. My main interests as an engineer are AI-driven systems and embedded machine learning applications. I am committed to building accurate and efficient models that perform reliably in real-world settings.</p>
+              <div class="team-contact">
+                <a href="https://www.linkedin.com/in/trangn12/" target="_blank" rel="noopener noreferrer">LinkedIn</a>
+              </div>
             </div>
           </article>
         </div>
