Brightened the Vial Images

--- a/index.html
+++ b/index.html
@@ -1080,9 +1080,9 @@
             Our pipeline begins with computer vision data collection, then uses a pre-trained YOLO classifier fine-tuned to detect cracks and verify proper vial capping. Click each category to explore the anomalies we track.
           </p>
           <div class="anomaly-grid">
-            <div class="anomaly-card anomaly-card--good" data-anomaly-more="photos/GoodVialMore.png" data-anomaly-title="Good" data-anomaly-desc="The vial has no cracks, is properly capped, and is at an ideal temperature. This is the desired state for production—no corrective action needed.">
+            <div class="anomaly-card anomaly-card--good" data-anomaly-more="photos/GoodVialMore_bright.png" data-anomaly-title="Good" data-anomaly-desc="The vial has no cracks, is properly capped, and is at an ideal temperature. This is the desired state for production—no corrective action needed.">
               <div class="anomaly-card__image-wrap">
-                <img src="photos/GoodVialMore.png" alt="Good vial">
+                <img src="photos/GoodVialMore_bright.png" alt="Good vial">
               </div>
               <div class="anomaly-card__content">
                 <span class="anomaly-card__badge">Pass</span>
@@ -1091,9 +1091,9 @@
                 <p class="anomaly-card__hint">Click to view details</p>
               </div>
             </div>
-            <div class="anomaly-card anomaly-card--hazard" data-anomaly-more="photos/HazardVialMore.png" data-anomaly-title="Hazard" data-anomaly-desc="The vial has no cracks and temperature is within acceptable range, but the vial is not properly capped. This is a salvageable defect—the product can be re-capped before it is lost.">
+            <div class="anomaly-card anomaly-card--hazard" data-anomaly-more="photos/HazardVialMore_bright.png" data-anomaly-title="Hazard" data-anomaly-desc="The vial has no cracks and temperature is within acceptable range, but the vial is not properly capped. This is a salvageable defect—the product can be re-capped before it is lost.">
               <div class="anomaly-card__image-wrap">
-                <img src="photos/HazardVialMore.png" alt="Hazard vial">
+                <img src="photos/HazardVialMore_bright.png" alt="Hazard vial">
               </div>
               <div class="anomaly-card__content">
                 <span class="anomaly-card__badge">Warning</span>
@@ -1102,9 +1102,9 @@
                 <p class="anomaly-card__hint">Click to view details</p>
               </div>
             </div>
-            <div class="anomaly-card anomaly-card--bad" data-anomaly-more="photos/BrokenVialMore.png" data-anomaly-title="Bad" data-anomaly-desc="The vial has cracks and/or the temperature is outside acceptable range. The vial is no longer salvageable—miscapping is no longer a pressing concern at this stage, as the product must be discarded.">
+            <div class="anomaly-card anomaly-card--bad" data-anomaly-more="photos/BrokenVialMore_bright.png" data-anomaly-title="Bad" data-anomaly-desc="The vial has cracks and/or the temperature is outside acceptable range. The vial is no longer salvageable—miscapping is no longer a pressing concern at this stage, as the product must be discarded.">
               <div class="anomaly-card__image-wrap">
-                <img src="photos/BrokenVialMore.png" alt="Broken vial">
+                <img src="photos/BrokenVialMore_bright.png" alt="Broken vial">
               </div>
               <div class="anomaly-card__content">
                 <span class="anomaly-card__badge">Fail</span>
